--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
-
+cloud-functions/functions/constants.js
 # Firebase cache
 .firebase/
 
