--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Confidential Files
+cloud-functions/functions/constants.js
+public/js/firebase-config.js
+
 # Logs
 logs
 *.log
@@ -5,7 +9,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
-cloud-functions/functions/constants.js
+
 # Firebase cache
 .firebase/
 
